<?xml version="1.0"?>
<package>
  <name>clock</name>
  <version>0.0.0</version>
  <description>The roamros package</description>

  <maintainer email="davideantonio.cucci@polimi.it">Davide A. Cucci</maintainer>

  <license>LGPLv3</license>

  <author email="davideantonio.cucci@polimi.it">Davide Antonio Cucci</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
<build_depend>vrep_common</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
<run_depend>vrep_common</run_depend>

</package>
